Implement OpenMind branch indicating option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,4 @@
-# CMakeList.txt : Top-level CMake project file, do global configuration
-# and include sub-projects here.
-#
+
 cmake_minimum_required (VERSION 3.8)
 
 # Select C++ active standard
@@ -12,6 +10,9 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 option(OPENMIND_DEBUG_CHECKS "Additional debug checks" OFF)
 option(OPENMIND_USE_OPENCL "OpenCL GPU calculations" ON)
 option(OPENMIND_MATH_USE_LEVELDB_CACHE "OpenCL GPU calculations" OFF)
+
+set(OPENMIND_VERSION_TAG main CACHE STRING "OpenMind library version to use")
+set(OPENMIND_VERSION_TAG generator CACHE STRING "OpenMind library version to use")
 
 # Find some Git
 find_package(Git QUIET)
@@ -26,7 +27,7 @@ endif()
 include(FetchContent)
 FetchContent_Declare(openmind
     GIT_REPOSITORY https://github.com/ohhmm/openmind.git
-    GIT_TAG generator)
+    GIT_TAG ${OPENMIND_VERSION_TAG})
 FetchContent_MakeAvailable(openmind)
 
 # Tell OpenMind to use any boost version installed in the system if any
@@ -35,7 +36,7 @@ if(Boost_FOUND)
     set(OPENMIND_REQUIRED_BOOST_VERSION ${Boost_VERSION} CACHE VERSION "Boost library version to use" FORCE)
 endif()
 
-# Include sub-projects.
+# Include sub-projects, base component 'libgen' goes first.
 fold(
 	libgen
 	)
