depend on Boost::program_options, libjpeg-turbo::turbojpeg-static and PNG::PNG

--- a/picture-pattern-generate/CMakeLists.txt
+++ b/picture-pattern-generate/CMakeLists.txt
@@ -1,5 +1,9 @@
 
 exe(libgen
-	#glennrp/libpng
-	#PNG::PNG
+
+	libjpeg-turbo/libjpeg-turbo
+	libjpeg-turbo::turbojpeg-static
+
+	glennrp/libpng
+	PNG::PNG
 	)
