--- a/picture-pattern-generate/CMakeLists.txt
+++ b/picture-pattern-generate/CMakeLists.txt
@@ -1,15 +1,1 @@
-if(MSVC)
-	option(PNG_SHARED "Build shared lib" OFF)
-endif()
-option(PNG_STATIC "Build static lib" ON)
-
-exe(libgen
-
-	libjpeg-turbo/libjpeg-turbo
-	libjpeg-turbo::turbojpeg-static
-
-	madler/zlib
-
-	glennrp/libpng
-	PNG::PNG_STATIC
-	)
+exe(libgen)
