CI: build prerequisites

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -64,6 +64,13 @@ jobs:
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         -S ${{ github.workspace }}
 
+    - name: Build prerequisites
+        run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config Release --target prerequisites
+
+    - name: Re-Configure CMake to detect built prerequisites
+        run: >
+          cmake -B ${{ steps.strings.outputs.build-output-dir }}
+
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
