--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ if(NOT GIT_EXECUTABLE)
     find_package(Git)
 endif()
 
+find_package(Threads)
+
 # Fetch some OpenMind
 include(FetchContent)
 FetchContent_Declare(skrypt
